# OpenCircuits

./: Browser_check.ts  HW1.ipynb  package.json
app/analog/ts/Sample Netlists/: ACexample.cir  Netlist1.cir  SeriesRLC.cir  WheatstoneBridge.cir  voltdiv.sp
app/analog/ts/actions/: InductanceChangeAction.ts
app/analog/ts/models/: AnalogCircuitDesigner.ts  AnalogComponent.ts  NetlistComponent.ts
docs/GettingStarted/: Contributing.md  Installation.mdx  StyleGuide.md  StyleGuide.mdx
docs/Guides/StyleGuide/: AirBnb.md  PullRequests.md  React.md  Redux.md  SCSS.md  Typescript.md  status.txt  todo.txt
scripts/: build.js  start.js
scripts/utils/: getNetworkIP.js
site/data/: analognavconfig.json
site/public/scss/: _tutorialpopup.scss  stylesheet.scss
site/templates/: Browser_Waring_Message.gohtml  Browser_Waring_Message.html  index.gohtml  replaceViewer.gohtml  selectionpopup.gohtml  selectionpopupanalog.gohtml  tutorialpopup.gohtml
src/server/: Cargo.toml
src/server/src/: auth.rs  config.rs  main.rs  storage.rs  web.rs
src/server/src/api/: circuits.rs
src/server/src/auth/: google_oauth2.rs
src/server/src/storage/: sqlite.rs
src/server_old/: main.go
src/server_rust/: Cargo.toml
src/server_rust/src/: api.rs  auth.rs  config.rs  main.rs  model.rs  storage.rs
src/server_rust/src/api/: circuits.rs
src/server_rust/src/auth/: no_auth.rs
src/server_rust/src/storage/: gcp_datastore.rs  mem.rs  sqlite.rs
src/server_rust/src/storage/gcp_datastore/: requests.rs
src/site/shared/: package.json
tests/UnitTests/: basic_circuit_tester.py
(+50 files in other folders)
